# TrabajoIS

./: README.md  histuser.md  requisitos.md
Casos_de_uso/: CU1.md  CU10.md  CU11.md  CU12.md  CU13.md  CU14.md  CU2.md  CU3.md  CU4.md  CU5.md  CU6.md  CU7.md  CU71.md  CU8.md  CU9.md
Diagrama_de_clase/: diagrama_clase.md
Diagramas_de_secuencia/: diagrama_secuencia.md
codificacion/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cita.cpp  cita.hpp  citas.cpp  citas.hpp  cmake_install.cmake  funcAuxHistMed.cpp  funcAuxHistMed.hpp  funcionesAuxTratamiento.cpp  funcionesAuxTratamiento.hpp  funcionesAuxiliares.cpp  funcionesAuxiliares.hpp  funcionesAuxiliaresCitas.cpp  funcionesAuxiliaresCitas.hpp  funcionesAuxiliaresPaciente.cpp  funcionesAuxiliaresPaciente.hpp  historialMed.cpp  historialMed.hpp  main.cpp  main.x  main_LOLO.cpp  paciente.cpp  paciente.hpp  tratamiento.cpp  tratamiento.hpp
codificacion/BD/: agenda.txt  pacientes.txt  tratamientos_curso.txt  tratamientos_curso.txt~
codificacion/historiales/: 12345678a.txt  12345678a.txt~  16335698b.txt  31001651C.txt  31020466K.txt  tratamientos_curso.txt~
historias/: HU_1.md  HU_10.md  HU_11.md  HU_12.md  HU_13.md  HU_14.md  HU_2.md  HU_3.md  HU_4.md  HU_5.md  HU_6.md  HU_7.md  HU_8.md  HU_9.md
